@@ -8,11 +8,14 @@
 		<property name="location" value="classpath:/config/ldap.properties" />
 	</bean>
 	
-	<bean id="contextSource" class="org.springframework.ldap.core.support.LdapContextSource" >
-		<property name="urls" value="${urls}" />
-		<property name="userDn" value="${userDn}" />
+	<bean id="contextSource"
+		class="org.springframework.ldap.test.TestContextSourceFactoryBean">
+		<property name="defaultPartitionSuffix" value="dc=jayway,dc=se" />
+		<property name="defaultPartitionName" value="jayway" />
+		<property name="principal" value="${userDn}" />
 		<property name="password" value="${password}" />
-		<property name="base" value="${base}" />
+		<property name="ldifFile" value="/setup_data.ldif" />
+		<property name="port" value="3901" />
 	</bean>
 	
 	<bean id="ldapTemplate" class="org.springframework.ldap.core.LdapTemplate">
@@ -26,7 +29,7 @@
 
 	<bean id="traditionalPersonDao"
 		class="org.springframework.ldap.samples.article.dao.TraditionalPersonDaoImpl">
-		<property name="url" value="ldap://localhost:3900" />
+		<property name="url" value="ldap://localhost:3901" />
 		<property name="base" value="dc=jayway,dc=se" />
 		<property name="userDn" value="${userDn}" />
 		<property name="password" value="${password}" />
